# deskpair

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: flatpak.yml
docs/: index.html
flatpak/: dev.deskpair.app.desktop  dev.deskpair.app.flatpakref  dev.deskpair.app.metainfo.xml  dev.deskpair.app.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main-window.json
src-tauri/src/: lib.rs  state.rs  tray.rs
src-tauri/src/commands/: config.rs  install.rs  mod.rs  network.rs  server.rs  system.rs  tls.rs
src/components/dashboard/: ClientList.tsx  ConnectionInfo.tsx  QRCode.tsx  ServerControl.tsx  StatsCards.tsx
src/components/layout/: Header.tsx  Sidebar.tsx  StatusBadge.tsx
src/components/settings/: AdvancedSettings.tsx  DisplaySettings.tsx  InputSettings.tsx  NetworkSettings.tsx  PerformanceSettings.tsx  SecuritySettings.tsx  SystemSettings.tsx
src/components/wizard/: StepBuild.tsx  StepComplete.tsx  StepConfigure.tsx  StepDependencies.tsx  WizardLayout.tsx
src/hooks/: useConfig.ts  useNetwork.ts  useServer.ts
src/lib/: constants.ts  tauri.ts
src/pages/: AboutPage.tsx  DashboardPage.tsx  LogsPage.tsx  SettingsPage.tsx  WizardPage.tsx
src/stores/: configStore.ts  serverStore.ts
src/styles/: globals.css
